[project]
name = "convertLinks"
version = "0.1.0"
description = ""
authors = [
    {name = "Dist Bit", email = "adp01@pm.me"},
]
dependencies = [
    "python-dotenv>=1.0.1,<2.0.0",
    "loguru>=0.7.2,<0.8.0",
    "pysnooper>=1.2.0,<2.0.0",
    "requests>=2.32.3",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.1",
    "openai>=1.54.3",
    "pyperclip>=1.9.0",
    "audioop-lts>=0.2.1",
    "python-dateutil>=2.9.0.post0",
    "telethon>=1.37.0",
    "yt-dlp>=2024.11.4",
    "html2text>=2024.2.26",
    "bs4>=0.0.2",
    "eldar>=0.0.8",
    "unidecode>=1.3.8",
    "matplotlib>=3.9.2",
    "urlexpander>=0.0.37",
    "pypdf2",
    "soundcloud-lib>=0.6.1",
    "pytweettoolkit>=1.0.1",
]
requires-python = ">=3.13"
license = {text = "UNLICENCE"}
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
